--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
@@ -8,20 +7,18 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 </head>
-
 <body>
     <div class="dropdwn">
         <nav>
-            <label class="logo">MATTERHOSPITAL</label>
+            <label class="logo">BETAHOSPITAL</label>
             <ul>
-                <li>
-                    <a class="active" href=" # "><i class="fa fa-home " aria-hidden="true "></i>HOME</a></li>
+                <li><a class="active" href=" # "><i class="fa fa-home " aria-hidden="true "></i>HOME</a></li>
                 <li><a href="# "><i class="fa fa-clone " aria-hidden="true "></i>ABOUT</a>
                     <ul>
                         <li>
-                            <a href="staffs.html " target="_blank"><i class="fa fa-users " aria-hidden="true "></i>Stuffs</a>
+                            <a href="staffs.html " target="_blank"><i class="fa fa-users " aria-hidden="true "></i>Staffs</a>
                         </li>
-                        <li><a href="# "><i class="fa fa-medkit " aria-hidden="true "></i>Services/<i class="fa fa-star " aria-hidden="true "></i>works</a></li>
+                        <li><a href="services.html" target="_blank"><i class="fa fa-medkit " aria-hidden="true "></i>Services/<i class="fa fa-star " aria-hidden="true "></i>works</a></li>
 
                     </ul>
                 </li>
@@ -30,19 +27,19 @@
 
                 <li><a href="# "><i class="fa fa-phone-square " aria-hidden="true "></i>CONTACT</a>
                     <ul>
-                        <li><a href="# "><i class="fa fa-map-marker " aria-hidden="true "></i>Mapping-/<i class="fa fa-location-arrow " aria-hidden="true "></i>Directions</a></li>
+                        <li><a href="contact.html" target="_blank"><i class="fa fa-map-marker " aria-hidden="true "></i>Mapping-/<i class="fa fa-location-arrow " aria-hidden="true "></i>Directions</a></li>
 
-                    </ul>
+         </ul>
                 </li>
-
+            </ul>
         </nav>
     </div>
 
     <div class="body ">
-        <h1>Welcome to Matter hospital</h1>
+        <h1>Welcome to BETA hospital</h1>
         <h2>Your Health is Our Concern</h2>
-        <div class="buttons"><button><a href="services.html">Explore Us</a></button>
-            <button class="btn"><a href="signup.html">Join Us</a></button>
+        <div class="buttons"><button><a href="services.html" target="_blank">Explore Us</a></button>
+            <button class="btn"><a href="signup.html" target="_blank">Join Us</a></button>
         </div>
     </div>
 
