--- a/staffs.html
+++ b/staffs.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="about.css">
-    <title>About staffs</title>
+    <title>our staffs</title>
 </head>
 
 <body>
@@ -16,25 +15,21 @@
                 <img src="national.jpg " style="width:300px; height: 250px;">
             </div>
             <div class=" column ">
-                <img src="piron.jpg " style="width:400px; height: 250px;">
+                <img src="piron.jpg " style="width:350px; height: 250px;">
             </div>
             <div class=" column ">
-                <img src="ven.jpg " style="width:400px; height: 250px;">
+                <img src="ven.jpg " style="width:300px; height: 250px;">
             </div>
             <div class=" column ">
-                <img src="shaw.jpg " style="width:350px; height: 250px;">
+                <img src="shaw.jpg " style="width:340px; height: 250px;">
             </div>
         </div>
 
     </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi in totam praesentium necessitatibus optio ipsum animi harum veritatis cumque, iusto aliquid fuga eligendi ut neque asperiores. Unde facere a quae voluptatem asperiores optio cum quibusdam
-        aliquam. Deleniti ut ad, laudantium iusto dignissimos ipsum adipisci culpa libero et, aliquid eveniet facere eaque natus delectus sint. Eveniet excepturi quaerat voluptates eum atque officiis, numquam porro aliquam a iure non eligendi aut doloribus
-        perspiciatis deserunt temporibus dignissimos alias necessitatibus, tempore reiciendis consequatur ipsam! Ea asperiores facilis velit accusantium dolores atque exercitationem ab, facere ipsam ullam! Aliquam provident ducimus animi rem! Ex fuga
-        fugiat quidem sed laboriosam, tempore fugit voluptas dolore exercitationem quia, cum adipisci dolorum eaque numquam molestias illum? Neque rem voluptatibus vero nisi, culpa earum praesentium, nesciunt quae asperiores iusto, obcaecati quo nobis
-        beatae. Perferendis assumenda eveniet magnam aliquid veniam quaerat recusandae accusamus totam magni, cupiditate asperiores a sed qui amet quas aliquam enim ab molestiae necessitatibus dicta iure, quo esse obcaecati optio? Sint officia sed eos
-        labore hic quod, eum quia quidem sapiente quos voluptatibus corrupti amet quae iusto veniam quibusdam doloribus neque est? Ut nemo praesentium quisquam nobis itaque minus expedita, sed repellat laborum obcaecati perferendis tempore dolorem ipsam
-        quos.
-    </p>
+    <p style="width: fit-content;">You may be treated by a number of doctors during your hospital stay – the consultant (specialist), the registrar and the resident. Together they assess and manage your medical care. Depending on which hospital you are in, you may also be treated by
+        interns and student doctors who work under the supervision of the senior doctors.Nurses manage most of your ongoing care and treatment in hospital. They assess, plan and administer your daily treatment and manage your general health. Speak to
+        them about your immediate needs. They can also direct you to the right people to speak to about specific medical issues. Keeping a hospital running requires a great deal of organisation and administration. During your hospital stay, you will see
+        a wide range of support and administrative staff taking care of everything from laundry and meals to patient transport and maintenance. </p>
 
     <div class="container">
         <div class=" row ">
@@ -42,17 +37,38 @@
                 <img src="christian.jpg " style="width:300px; height: 250px;">
             </div>
             <div class=" column ">
-                <img src="hush.jpg" style="width:400px; height: 250px;">
+                <img src="hush.jpg" style="width:350px; height: 250px;">
             </div>
             <div class=" column ">
-                <img src="inject.jpg " style="width:400px; height: 250px;">
+                <img src="name.jpg " style="width:300px; height: 250px;">
             </div>
             <div class=" column ">
-                <img src="naidoo.jpg " style="width:350px; height: 250px;">
+                <img src="mm.jpg" style="width:340px; height: 250px;">
             </div>
         </div>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis recusandae sint, dignissimos voluptatem distinctio ab ea est maxime delectus atque, laudantium illo veritatis beatae quam aliquam voluptates eum aliquid mollitia esse magni possimus
-            enim perferendis ipsam? Repellat est ea eveniet cum amet qui repellendus. Molestias optio sunt fuga ipsum consectetur!</p>
+        <p style="width: fit-content;">Doctors. If you’re a patient at a teaching hospital, this includes medical students (people in school to become doctors), interns and residents (people who have earned the title of “doctor”, but who are still learning their craft), and attendings
+            (people who have completed their formal training as physicians). If you’re not at a teaching hospital, it’s less likely you’ll see medical students and other trainees (the army of white coats tromping through the hallways). Instead, you’ll
+            see lone attending physicians. Nurses. Nurses play vital roles in patient care; without them, hospitals simply would not work. Nurses arguably spend the most time with patients. They monitor and observe patients around the clock. As a result,
+            they’re often the first to realize that something has changed and thus have the responsibility to do something about it. There are different kinds of nurses, such as registered nurses, licensed practical nurses, and certified nursing assistants.
+            Their roles differ in terms of their training, skill sets, and responsibilities, but they all serve to observe and monitor patients and their conditions. Therapists. Not the talky kind. There are respiratory therapists, speech therapists,
+            physical therapists, and occupational therapists. They focus on skills and function: How can we help this patient walk? How can we help this patient talk with less difficulty? How can we retrain the muscles in this patient’s hand so he can
+            write again? Technicians. Radiology technicians, pharmacy technicians, surgical technicians, electroencephalogram technicians, patient care technicians … the list is long. They assist other professionals in the hospital in their duties and
+            may have more contact with patients that the professionals themselves. Consider an ultrasound technician. A physician may order the ultrasound, but it is the technician who will explain to the patient what an ultrasound is and perform the
+            procedure. A radiologist will interpret the results. A special note about patient care technicians (PCTs): These individuals often spend the most time with patients and are often a treasure trove of data for nurses and physicians. If you are
+            a physician working in a hospital, make a point of talking with the PCTs. They’re the ones who will know if the patient slept, went to a procedure, has a change in mental status, etc. Janitorial staff. These individuals have one of the most
+            important jobs in the hospital: They help with hospital-wide infection control. They help prevent people from getting more sick. If you work in a hospital, thank a janitor today for what they do. Clerical staff. This includes the clerks who
+            serve as receptionists for the hospital units (not an easy job: imagine juggling phone calls from patients, managing the anxiety of family members of patients, paging physicians multiple times because they don’t call back…), hospital operators,
+            all the people working in medical records, and the staff who work with the hospital administrators. Hospitals generate a lot of data. Someone has to help manage and organize all that data. Information technology staff. Electronic health records
+            now hold patient information. The networks fails. The mouse doesn’t work. There aren’t enough terminals. Someone can’t remember their password. The radiology images aren’t showing up. The orders didn’t go through. The IT department gets a
+            lot of pressure to get it all right. Food services staff. There are all the people who cook hospital meals, transport and deliver the meals to each patient, and wash the leftover dishes. These people also prepare the food in the hospital cafeteria,
+            which feeds the rest of us who are well enough to get it on our own. People want to eat and they want to eat food that tastes good. In the hospital it is hard to please all of the people all of the time. Environmental services staff. These
+            are the plumbers, electricians, HVAC experts, etc. who make sure that the electricity stays on, that there are backup generators available, that the water temperatures are satisfactory, that the ambient temperatures are within a certain range,
+            that the windows seal tight, etc. If the building doesn’t “work”, then the hospital doesn’t work. Pharmacy staff. I don’t know how many thousands of medications are available, but the pharmacy takes care of all of them. Whether they are amazing
+            antibiotics that will drip through an IV or cartons of chicken soup (yes, doctors can order chicken soup), the pharmacy takes all of those orders and fills them. They ensure that medications are available in every single hospital unit and
+            prepare medications for patients to take with them when they leave the hospital. And they have to make sure that they fill the right drug at the right dose at the right time for the right person. There are many more people who work in hospitals;
+            I do not omit them willfully. We often take for granted all the people who make a hospital work. If you are a patient (or someone visiting a patient) in a hospital, I encourage you to thank all the people who have helped you. Hospital staff
+            appreciate hearing that and want to know that their actions made a difference. If you work in a hospital (especially physicians), I encourage you to thank your colleagues, particularly those who have a completely different job from yours.
+            They are doing something to help you do your work. Let them know that you appreciate it. </p>
 </body>
 
 </html>
